[tool.poetry]
name = "yamt"
version = "0.1.4.3"
description = "yet another monkey toolkit"
authors = ["lightmanLP <liteman1000@gmail.com>", "mikk357 <mikk357@yandex.com>"]
license = "MIT"
readme = "README.md"
keywords = ["utils", "tools", "misc"]

[tool.poetry.urls]
"Github" = "https://github.com/UT1C/yamt"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
typing-extensions = "^4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
